# 42-ft_linear_regression

./: README.md  predict.py  pyproject.toml  train.py
